# BQ.R-ext.ver

./: LICENSE  README.md  README2.md
applications/genkipi/app/app/: BUILD.gn
applications/genkipi/app/app/dog_py/: BUILD.gn  dog.c  dog.h  genki_web_ohosdog.c  genki_web_ohosdog.h  kinematics.c  kinematics.h  main.c  pca9685.h
applications/genkipi/app/app/dog_py/mpu6050/: imu.c  imu.h  mpu6050.c  mpu6050.h
applications/genkipi/app/app/dog_py/st7735/: Weather.h  a.h  lcd.c
applications/genkipi/app/app/lcd_test/: BUILD.gn  Weather.h  lcd.c  main.c
applications/genkipi/app/app/libm_port/: BUILD.gn  math_private.h
applications/genkipi/app/app/lo_test/: BUILD.gn  Weather.h  lcd.h  main.c  oledfont.h
applications/genkipi/app/app/mpu6050_test/: BUILD.gn  main.c
applications/genkipi/app/app/music/: BUILD.gn  main.c
applications/genkipi/app/app/oled_test/: BUILD.gn  main.c  pca9685.c
applications/genkipi/app/app/piano/: BUILD.gn  main.c
applications/genkipi/app/app/thread/: BUILD.gn  main.c
base/hiviewdfx/hiview_lite/: BUILD.gn  README.md  README_zh.md  bundle.json  hiview_cache.c  hiview_file.c  hiview_file.h  hiview_service.c  hiview_util.c
base/security/deviceauth/frameworks/deviceauth_lite/: BUILD.gn
base/security/deviceauth/frameworks/deviceauth_lite/source/: hichain.c
base/security/deviceauth/frameworks/deviceauth_lite/unittest/: deviceauth_test.cpp
base/security/deviceauth/hals/: BUILD.gn  deviceauth_hals.gni
base/security/deviceauth/hals/inc/common/: alg_defs.h  alg_loader.h  common_util.h  hc_error.h  hc_parcel.h  hc_string.h  hc_vector.h  huks_adapter.h  json_utils.h
base/security/deviceauth/hals/inc/linux/: hc_condition.h  hc_file.h  hc_mutex.h  hc_types.h  mbedtls_hash_to_point.h
base/security/deviceauth/hals/inc/liteos/: hc_condition.h  hc_file.h  hc_init_protection.h  hc_mutex.h  hc_time.h  hc_types.h
base/security/deviceauth/hals/src/common/: common_util.c  hc_log.c  hc_parcel.c  hc_string.c  hc_task_thread.c  hc_tlv_parser.c  json_utils.c
base/security/deviceauth/hals/src/linux/: hc_condition.c  hc_file.c  hc_init_protection.c  hc_mutex.c  hc_thread.c  hc_types.c
base/security/deviceauth/hals/src/liteos/: hc_file.c  hc_mutex.c  hc_thread.c  hc_time.c
base/security/deviceauth/services/: BUILD.gn  device_auth.c  deviceauth.gni
base/security/deviceauth/services/common/inc/: common_defs.h
base/security/deviceauth/services/group_auth/inc/: base_group_auth.h  group_auth_manager.h
base/security/deviceauth/services/group_manager/inc/: base_group.h  group_common.h  group_manager.h
base/security/deviceauth/services/module/inc/: dev_auth_module_manager.h  module_common.h  version_util.h
base/security/deviceauth/services/module/src/: dev_auth_module_manager.c  module_common.c  version_util.c
base/security/deviceauth/services/session/inc/: auth_session_common_defines.h  auth_session_common_util.h  base_session.h  session_manager.h
base/security/deviceauth/services/session/src/: auth_session_common_util.c  session_manager.c
base/security/deviceauth/test/unittest/deviceauth/: BUILD.gn
base/security/permission/: BUILD.gn  README.md  README_zh.md  bundle.json  ohos.build
base/security/permission/frameworks/permission_standard/permissioncommunicationadapter/: BUILD.gn
base/security/permission/frameworks/permission_standard/permissioninfrastructure/: BUILD.gn
base/security/permission/interfaces/innerkits/permission_lite/: ipc_auth_interface.h  pms_interface_inner.h
base/security/permission/interfaces/kits/permission_lite/: BUILD.gn  pms_interface.h  pms_types.h
base/security/permission/services/permission_lite/: BUILD.gn
base/security/permission/services/permission_lite/ipc_auth/: BUILD.gn
base/security/permission/services/permission_lite/js_api/: BUILD.gn
base/security/permission/services/permission_lite/pms/: BUILD.gn
base/security/permission/services/permission_lite/pms_base/: BUILD.gn
base/security/permission/services/permission_lite/pms_client/: BUILD.gn  (+1 more)
device/itcast/genkipi/interfaces/: BUILD.gn
device/itcast/genkipi/interfaces/kits/: dtpython.h  genki_common.h  genki_info.h  genki_led.h  genki_thread.h  genki_wifi_ap.h  genki_wifi_sta.h
device/itcast/genkipi/iot_lvgl/: BUILD.gn
device/itcast/genkipi/iot_lvgl/font/: answer_icon.c  call_phone_icon.c  city_font_25.c  icon_img_front.c  my_font_15.c  my_font_16.c  my_font_24.c  my_font_30.c  my_font_35.c  weather_font_15.c
device/itcast/genkipi/iot_lvgl/lcd/: lcd_gc9a01.c  lcd_gc9a01.h  lcd_st7789.c  lcd_st7789.h  pin.h
device/itcast/genkipi/iot_tool/: BUILD.gn
device/itcast/genkipi/iot_tool/include/: genki_base.h  genki_shell.h  genki_shell_pyrun.h  genki_shell_python.h  genki_shell_wifi_info.h  genki_shell_wifi_sta.h  genki_web.h  genki_web_base.h  genki_web_pyrun.h
device/itcast/genkipi/iot_tool/src/: genki_base.c  genki_shell.c  genki_shell_pyrun.c  genki_shell_python.c  genki_shell_wifi_info.c  genki_shell_wifi_sta.c  genki_web.c  genki_web_base.c  genki_web_pyrun.c
device/itcast/genkipi/sdk_liteos/: BUILD.gn  config.gni  hm_build.sh
foundation/distributedschedule/samgr_lite/samgr/: BUILD.gn
foundation/distributedschedule/samgr_lite/samgr/adapter/: BUILD.gn
foundation/distributedschedule/samgr_lite/samgr/source/: BUILD.gn  message.c  samgr_lite.c  task_manager.c
foundation/distributedschedule/samgr_lite/samgr_endpoint/: BUILD.gn
foundation/distributedschedule/samgr_lite/samgr_endpoint/source/: default_client.h  endpoint.c  endpoint.h  sa_store.c  sa_store.h
test/xts/acts/compileruntime/: BUILD.gn
test/xts/acts/compileruntime/process_lib_standard/: BUILD.gn  Test.json
test/xts/acts/compileruntime/url_lib_standard/: BUILD.gn  Test.json
test/xts/acts/compileruntime/util_lib_standard/: BUILD.gn  Test.json
test/xts/acts/compileruntime/worker_lib_standard/: BUILD.gn
test/xts/acts/graphic_lite/graphic_utils/: BUILD.gn
test/xts/acts/graphic_lite/ui/: BUILD.gn
test/xts/acts/security/: BUILD.gn
test/xts/acts/security_lite/hichain_posix0/: BUILD.gn  Test.json  device_auth.h  device_auth_defines.h  ipc_sdk.c  ipc_service.c
(+1498 files in other folders)
