# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
group("permission_build_module_standard") {
  if (is_standard_system) {
    deps = [
      "//base/security/permission/interfaces/innerkits/permission_standard/permissionsdk:libpermissionsdk_standard",
      "//base/security/permission/services/permission_standard/permissionmanagerservice:permission_manager_service_standard",
      "//base/security/permission/services/permission_standard/permissionmanagerservice/main/sa_profile:permission_sa_profile_standard",
    ]
  }
}

group("permission_build_module_standard_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "//base/security/permission/interfaces/innerkits/permission_standard/permissionsdk/test:unittest",
      "//base/security/permission/services/permission_standard/permissionmanagerservice/test:unittest",
    ]
  }
}
