# Copyright (c) 2020 Itcast Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/ndk/ndk.gni")

group("genkipi_interfaces") {
    deps = [
        "$ohos_board_adapter_dir/hals/interfaces:hal_genkipi_interfaces",
    ]
}

if (ohos_kernel_type == "liteos_m") {
    ndk_lib("genkipi_interfaces_ndk") {
        deps = [
            "$ohos_board_adapter_dir/hals/interfaces:hal_genkipi_interfaces",
        ]
        head_files = [ "//device/itcast/genkipi/interfaces/kits" ]
    }
}
