# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("iot_lvgl") {
    sources = [
        "lcd/lcd_st7789.c",
        "lcd/lcd_gc9a01.c",
        
        "font/call_phone_icon.c",
        "font/answer_icon.c",
        "font/my_font_35.c",
        "font/my_font_15.c",
        "font/my_font_16.c",
        "font/my_font_24.c",
        "font/my_font_30.c",
        "font/weather_font_15.c",
        "font/city_font_25.c",
        "font/icon_img_front.c"
    ]

    cflags = [ "-Wno-unused-variable" ]
    cflags += [ "-Wno-unused-but-set-variable" ]
    cflags += [ "-Wno-unused-parameter" ]

    include_dirs = [
        "//base/iot_hardware/peripheral/interfaces/kits",
        "lcd",
        "lcd/GUI",
        "lcd/GUI/lvgl",
        "lcd/GUI/lvgl_drivers",
#        "//device/itcast/genkipi/interfaces/kits",
    ]
    deps = [ 
         "lcd/GUI:GUI"
    ]
}