# Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = ""

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = ""

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = "rv32imac"

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
board_toolchain = "riscv32-unknown-elf"

# The toolchain path installed, it's not mandatory if you have added toolchain path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "riscv32-unknown-elf-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
  "-mabi=ilp32",
  "-falign-functions=2",
  "-msave-restore",
  "-fno-optimize-strlen",
  "-freorder-blocks-algorithm=simple",
  "-fno-schedule-insns",
  "-fno-inline-small-functions",
  "-fno-inline-functions-called-once",
  "-mtune=size",
  "-mno-small-data-limit=0",
  "-fno-aggressive-loop-optimizations",
  "-std=c99",
  "-Wpointer-arith",
  "-Wstrict-prototypes",
  "-ffunction-sections",
  "-fdata-sections",
  "-fno-exceptions",
  "-fno-short-enums",
  "-Wextra",
  "-Wundef",
  "-U",
  "PRODUCT_CFG_BUILD_TIME",
  "-DLOS_COMPILE_LDM",
  "-DPRODUCT_USR_SOFT_VER_STR=None",
  "-DCYGPKG_POSIX_SIGNALS",
  "-D__ECOS__",
  "-D__RTOS_",
  "-DPRODUCT_CFG_HAVE_FEATURE_SYS_ERR_INFO",
  "-D__LITEOS__",
  "-DLIB_CONFIGURABLE",
  "-DLOSCFG_SHELL",
  "-DLOSCFG_CACHE_STATICS",
  "-DCUSTOM_AT_COMMAND",
  "-DLOS_COMPILE_LDM",
  "-DLOS_CONFIG_IPERF3",
  "-DCMSIS_OS_VER=2",
  "-DSECUREC_ENABLE_SCANF_FILE=0",
  "-DCONFIG_AT_COMMAND",
  "-DPRODUCT_CFG_CHIP_VER_STR=Hi3861V100",
  "-DCHIP_VER_Hi3861",
  "-DPRODUCT_CFG_SOFT_VER_STR=Hi3861",
  "-DHI_BOARD_ASIC",
  "-DHI_ON_FLASH",
  "-DLITEOS_WIFI_IOT_VERSION",
]
board_cxx_flags = board_cflags
board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/system/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/config",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/config/nv",
  "${ohos_root_path}utils/native/lite/include",
  "${ohos_root_path}device/itcast/genkipi/hi3861_adapter/kal/cmsis",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/kernel/base/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/targets/hi3861v100/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/kernel/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/arch/risc-v/rv32im",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libm/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libsec/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/net/wpa_supplicant-2.7/src/common",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/targets/hi3861v100/plat/riscv",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/kernel/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/kernel/extended/runstop",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/posix/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/linux/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/third_party/lwip_sack/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/arch/generic",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/arch/riscv32",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/hw/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/nuttx/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libsec/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/targets/hi3861v100/config",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/targets/hi3861v100/user",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/targets/hi3861v100/plat",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/targets/hi3861v100/extend/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/arch",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/bionic/libm",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/shell/include",
  "${ohos_root_path}device/itcast/genkipi/sdk_liteos/platform/os/Huawei_LiteOS/net/telnet/include",
]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/itcast/genkipi/hi3861_adapter"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
